➕ HYFLEX: Upgrade gradle==8.10 + publishToMaven